# Ground_truth

./: ARCHITECTURE.md  CONCEPTS.md  DATA_SOURCES.md  Dockerfile  EXPLAINER.md  LICENSE  README.md  REAL_DATA.md  dashboard_app.py  dashboard_density.py  germany.py  io.py  landuse.py  pyproject.toml  temporal.py
configs/: demo.yaml
egms_tools/: __init__.py  change.py  cli.py  dashboard.py  dashboard_app.py  dashboard_density.py  dashboard_temporal.py  germany.py  heat.py  io.py  landuse.py  osm.py  report.py  surface.py  synthetic.py  temporal.py
experiments/: demo.py
tests/: test_egms.py
