[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "egms-tools"
version = "0.23.0"
description = "Make the free European Ground Motion Service usable: turn Copernicus EGMS InSAR into per-asset ground-motion risk."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sanju Sajimon" }]
keywords = ["EGMS", "InSAR", "ground-motion", "subsidence", "copernicus",
            "earth-observation", "infrastructure", "geospatial"]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
real = ["earthengine-api", "pandas>=2.0", "shapely>=2.0", "requests>=2.31", "pyproj>=3.4", "rasterio>=1.3"]  # real EGMS CSVs, EPSG:3035 reprojection, point-in-polygon, OSM fetch
dev = ["pytest>=7.4"]

[project.scripts]
egms = "egms_tools.cli:main"

[tool.setuptools.packages.find]
include = ["egms_tools*"]

[tool.pytest.ini_options]
filterwarnings = ["ignore"]
